MyC/y.output
Terminals unused in grammar

    DOT
    ARR


Grammar

    0 $accept: prog $end

    1 prog: glob_decl_list

    2 glob_decl_list: glob_var_list glob_fun_list

    3 glob_var_list: glob_var_list decl PV
    4              | ε

    5 glob_fun_list: glob_fun_list fun
    6              | fun

    7 fun: type fun_head fun_body

    8 po: PO

    9 fun_head: ID po PF
   10         | ID po params PF

   11 params: type ID VIR params
   12       | type ID

   13 vir: VIR

   14 $@1: ε

   15 fun_body: fao $@1 block faf

   16 fao: AO

   17 faf: AF

   18 block: decl_list inst_list

   19 decl_list: decl_list decl PV
   20          | ε

   21 decl: var_decl

   22 var_decl: type vlist

   23 vlist: vlist vir ID
   24      | ID

   25 type: typename

   26 typename: INT
   27         | FLOAT
   28         | VOID

   29 inst_list: inst_list inst
   30          | inst

   31 pv: PV

   32 inst: ao block af
   33     | exp pv
   34     | aff pv
   35     | ret pv
   36     | cond
   37     | loop
   38     | pv

   39 ao: AO

   40 af: AF

   41 aff: ID EQ exp

   42 ret: RETURN exp
   43    | RETURN PO PF

   44 $@2: ε

   45 cond: if_head ELSE $@2 inst
   46     | if_head

   47 $@3: ε

   48 if_head: if bool_cond $@3 inst

   49 bool_cond: PO exp PF

   50 if: IF

   51 $@4: ε

   52 loop: while while_cond $@4 inst

   53 while_cond: PO exp PF

   54 while: WHILE

   55 exp: MOINS exp
   56    | exp PLUS exp
   57    | exp MOINS exp
   58    | exp STAR exp
   59    | exp DIV exp
   60    | PO exp PF
   61    | ID
   62    | app
   63    | NUM
   64    | DEC
   65    | NOT exp
   66    | exp INF exp
   67    | exp SUP exp
   68    | exp EQUAL exp
   69    | exp DIFF exp

   70 @5: ε

   71 exp: exp AND @5 exp

   72 @6: ε

   73 exp: exp OR @6 exp

   74 $@7: ε

   75 app: fid $@7 PO args PF

   76 fid: ID

   77 args: arglist
   78     | ε

   79 arglist: arglist VIR exp
   80        | exp


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    NUM <int_value> (258) 63
    DEC <float_value> (259) 64
    INT (260) 26
    FLOAT (261) 27
    VOID (262) 28
    ID <string_value> (263) 9 10 11 12 23 24 41 61 76
    AO (264) 16 39
    AF (265) 17 40
    PO (266) 8 43 49 53 60 75
    PF (267) 9 10 43 49 53 60 75
    PV (268) 3 19 31
    VIR (269) 11 13 79
    RETURN (270) 42 43
    EQ (271) 41
    IF <label_value> (272) 50
    ELSE <label_value> (273) 45
    WHILE <label_value> (274) 54
    AND <label_value> (275) 71
    OR <label_value> (276) 73
    NOT <label_value> (277) 65
    DIFF <label_value> (278) 69
    EQUAL <label_value> (279) 68
    SUP <label_value> (280) 67
    INF <label_value> (281) 66
    PLUS (282) 56
    MOINS (283) 55 57
    STAR (284) 58
    DIV (285) 59
    DOT (286)
    ARR (287)
    IFX (288)
    UNA (289)


Nonterminals, with rules where they appear

    $accept (35)
        on left: 0
    prog (36)
        on left: 1
        on right: 0
    glob_decl_list (37)
        on left: 2
        on right: 1
    glob_var_list (38)
        on left: 3 4
        on right: 2 3
    glob_fun_list (39)
        on left: 5 6
        on right: 2 5
    fun (40)
        on left: 7
        on right: 5 6
    po (41)
        on left: 8
        on right: 9 10
    fun_head <string_value> (42)
        on left: 9 10
        on right: 7
    params (43)
        on left: 11 12
        on right: 10 11
    vir (44)
        on left: 13
        on right: 23
    fun_body (45)
        on left: 15
        on right: 7
    $@1 (46)
        on left: 14
        on right: 15
    fao (47)
        on left: 16
        on right: 15
    faf (48)
        on left: 17
        on right: 15
    block (49)
        on left: 18
        on right: 15 32
    decl_list (50)
        on left: 19 20
        on right: 18 19
    decl (51)
        on left: 21
        on right: 3 19
    var_decl (52)
        on left: 22
        on right: 21
    vlist (53)
        on left: 23 24
        on right: 22 23
    type <type_value> (54)
        on left: 25
        on right: 7 11 12 22
    typename <type_value> (55)
        on left: 26 27 28
        on right: 25
    inst_list (56)
        on left: 29 30
        on right: 18 29
    pv (57)
        on left: 31
        on right: 33 34 35 38
    inst (58)
        on left: 32 33 34 35 36 37 38
        on right: 29 30 45 48 52
    ao (59)
        on left: 39
        on right: 32
    af (60)
        on left: 40
        on right: 32
    aff (61)
        on left: 41
        on right: 34
    ret (62)
        on left: 42 43
        on right: 35
    cond <label_value> (63)
        on left: 45 46
        on right: 36
    $@2 (64)
        on left: 44
        on right: 45
    if_head <label_value> (65)
        on left: 48
        on right: 45 46
    $@3 (66)
        on left: 47
        on right: 48
    bool_cond (67)
        on left: 49
        on right: 48
    if <label_value> (68)
        on left: 50
        on right: 48
    loop <label_value> (69)
        on left: 52
        on right: 37
    $@4 (70)
        on left: 51
        on right: 52
    while_cond (71)
        on left: 53
        on right: 52
    while <label_value> (72)
        on left: 54
        on right: 52
    exp <type_value> (73)
        on left: 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69 71 73
        on right: 33 41 42 49 53 55 56 57 58 59 60 65 66 67 68 69 71 73 79 80
    @5 (74)
        on left: 70
        on right: 71
    @6 (75)
        on left: 72
        on right: 73
    app <type_value> (76)
        on left: 75
        on right: 62
    $@7 (77)
        on left: 74
        on right: 75
    fid <string_value> (78)
        on left: 76
        on right: 75
    args <int_value> (79)
        on left: 77 78
        on right: 75
    arglist <int_value> (80)
        on left: 79 80
        on right: 77 79


State 0

    0 $accept: • prog $end

    $default  reduce using rule 4 (glob_var_list)

    prog            go to state 1
    glob_decl_list  go to state 2
    glob_var_list   go to state 3


State 1

    0 $accept: prog • $end

    $end  shift, and go to state 4


State 2

    1 prog: glob_decl_list •

    $default  reduce using rule 1 (prog)


State 3

    2 glob_decl_list: glob_var_list • glob_fun_list
    3 glob_var_list: glob_var_list • decl PV

    INT    shift, and go to state 5
    FLOAT  shift, and go to state 6
    VOID   shift, and go to state 7

    glob_fun_list  go to state 8
    fun            go to state 9
    decl           go to state 10
    var_decl       go to state 11
    type           go to state 12
    typename       go to state 13


State 4

    0 $accept: prog $end •

    $default  accept


State 5

   26 typename: INT •

    $default  reduce using rule 26 (typename)


State 6

   27 typename: FLOAT •

    $default  reduce using rule 27 (typename)


State 7

   28 typename: VOID •

    $default  reduce using rule 28 (typename)


State 8

    2 glob_decl_list: glob_var_list glob_fun_list •
    5 glob_fun_list: glob_fun_list • fun

    INT    shift, and go to state 5
    FLOAT  shift, and go to state 6
    VOID   shift, and go to state 7

    $default  reduce using rule 2 (glob_decl_list)

    fun       go to state 14
    type      go to state 15
    typename  go to state 13


State 9

    6 glob_fun_list: fun •

    $default  reduce using rule 6 (glob_fun_list)


State 10

    3 glob_var_list: glob_var_list decl • PV

    PV  shift, and go to state 16


State 11

   21 decl: var_decl •

    $default  reduce using rule 21 (decl)


State 12

    7 fun: type • fun_head fun_body
   22 var_decl: type • vlist

    ID  shift, and go to state 17

    fun_head  go to state 18
    vlist     go to state 19


State 13

   25 type: typename •

    $default  reduce using rule 25 (type)


State 14

    5 glob_fun_list: glob_fun_list fun •

    $default  reduce using rule 5 (glob_fun_list)


State 15

    7 fun: type • fun_head fun_body

    ID  shift, and go to state 20

    fun_head  go to state 18


State 16

    3 glob_var_list: glob_var_list decl PV •

    $default  reduce using rule 3 (glob_var_list)


State 17

    9 fun_head: ID • po PF
   10         | ID • po params PF
   24 vlist: ID •

    PO  shift, and go to state 21

    $default  reduce using rule 24 (vlist)

    po  go to state 22


State 18

    7 fun: type fun_head • fun_body

    AO  shift, and go to state 23

    fun_body  go to state 24
    fao       go to state 25


State 19

   22 var_decl: type vlist •
   23 vlist: vlist • vir ID

    VIR  shift, and go to state 26

    $default  reduce using rule 22 (var_decl)

    vir  go to state 27


State 20

    9 fun_head: ID • po PF
   10         | ID • po params PF

    PO  shift, and go to state 21

    po  go to state 22


State 21

    8 po: PO •

    $default  reduce using rule 8 (po)


State 22

    9 fun_head: ID po • PF
   10         | ID po • params PF

    INT    shift, and go to state 5
    FLOAT  shift, and go to state 6
    VOID   shift, and go to state 7
    PF     shift, and go to state 28

    params    go to state 29
    type      go to state 30
    typename  go to state 13


State 23

   16 fao: AO •

    $default  reduce using rule 16 (fao)


State 24

    7 fun: type fun_head fun_body •

    $default  reduce using rule 7 (fun)


State 25

   15 fun_body: fao • $@1 block faf

    $default  reduce using rule 14 ($@1)

    $@1  go to state 31


State 26

   13 vir: VIR •

    $default  reduce using rule 13 (vir)


State 27

   23 vlist: vlist vir • ID

    ID  shift, and go to state 32


State 28

    9 fun_head: ID po PF •

    $default  reduce using rule 9 (fun_head)


State 29

   10 fun_head: ID po params • PF

    PF  shift, and go to state 33


State 30

   11 params: type • ID VIR params
   12       | type • ID

    ID  shift, and go to state 34


State 31

   15 fun_body: fao $@1 • block faf

    $default  reduce using rule 20 (decl_list)

    block      go to state 35
    decl_list  go to state 36


State 32

   23 vlist: vlist vir ID •

    $default  reduce using rule 23 (vlist)


State 33

   10 fun_head: ID po params PF •

    $default  reduce using rule 10 (fun_head)


State 34

   11 params: type ID • VIR params
   12       | type ID •

    VIR  shift, and go to state 37

    $default  reduce using rule 12 (params)


State 35

   15 fun_body: fao $@1 block • faf

    AF  shift, and go to state 38

    faf  go to state 39


State 36

   18 block: decl_list • inst_list
   19 decl_list: decl_list • decl PV

    NUM     shift, and go to state 40
    DEC     shift, and go to state 41
    INT     shift, and go to state 5
    FLOAT   shift, and go to state 6
    VOID    shift, and go to state 7
    ID      shift, and go to state 42
    AO      shift, and go to state 43
    PO      shift, and go to state 44
    PV      shift, and go to state 45
    RETURN  shift, and go to state 46
    IF      shift, and go to state 47
    WHILE   shift, and go to state 48
    NOT     shift, and go to state 49
    MOINS   shift, and go to state 50

    decl       go to state 51
    var_decl   go to state 11
    type       go to state 52
    typename   go to state 13
    inst_list  go to state 53
    pv         go to state 54
    inst       go to state 55
    ao         go to state 56
    aff        go to state 57
    ret        go to state 58
    cond       go to state 59
    if_head    go to state 60
    if         go to state 61
    loop       go to state 62
    while      go to state 63
    exp        go to state 64
    app        go to state 65
    fid        go to state 66


State 37

   11 params: type ID VIR • params

    INT    shift, and go to state 5
    FLOAT  shift, and go to state 6
    VOID   shift, and go to state 7

    params    go to state 67
    type      go to state 30
    typename  go to state 13


State 38

   17 faf: AF •

    $default  reduce using rule 17 (faf)


State 39

   15 fun_body: fao $@1 block faf •

    $default  reduce using rule 15 (fun_body)


State 40

   63 exp: NUM •

    $default  reduce using rule 63 (exp)


State 41

   64 exp: DEC •

    $default  reduce using rule 64 (exp)


State 42

   41 aff: ID • EQ exp
   61 exp: ID •
   76 fid: ID •

    EQ  shift, and go to state 68

    PO        reduce using rule 76 (fid)
    $default  reduce using rule 61 (exp)


State 43

   39 ao: AO •

    $default  reduce using rule 39 (ao)


State 44

   60 exp: PO • exp PF

    NUM    shift, and go to state 40
    DEC    shift, and go to state 41
    ID     shift, and go to state 69
    PO     shift, and go to state 44
    NOT    shift, and go to state 49
    MOINS  shift, and go to state 50

    exp  go to state 70
    app  go to state 65
    fid  go to state 66


State 45

   31 pv: PV •

    $default  reduce using rule 31 (pv)


State 46

   42 ret: RETURN • exp
   43    | RETURN • PO PF

    NUM    shift, and go to state 40
    DEC    shift, and go to state 41
    ID     shift, and go to state 69
    PO     shift, and go to state 71
    NOT    shift, and go to state 49
    MOINS  shift, and go to state 50

    exp  go to state 72
    app  go to state 65
    fid  go to state 66


State 47

   50 if: IF •

    $default  reduce using rule 50 (if)


State 48

   54 while: WHILE •

    $default  reduce using rule 54 (while)


State 49

   65 exp: NOT • exp

    NUM    shift, and go to state 40
    DEC    shift, and go to state 41
    ID     shift, and go to state 69
    PO     shift, and go to state 44
    NOT    shift, and go to state 49
    MOINS  shift, and go to state 50

    exp  go to state 73
    app  go to state 65
    fid  go to state 66


State 50

   55 exp: MOINS • exp

    NUM    shift, and go to state 40
    DEC    shift, and go to state 41
    ID     shift, and go to state 69
    PO     shift, and go to state 44
    NOT    shift, and go to state 49
    MOINS  shift, and go to state 50

    exp  go to state 74
    app  go to state 65
    fid  go to state 66


State 51

   19 decl_list: decl_list decl • PV

    PV  shift, and go to state 75


State 52

   22 var_decl: type • vlist

    ID  shift, and go to state 76

    vlist  go to state 19


State 53

   18 block: decl_list inst_list •
   29 inst_list: inst_list • inst

    NUM     shift, and go to state 40
    DEC     shift, and go to state 41
    ID      shift, and go to state 42
    AO      shift, and go to state 43
    PO      shift, and go to state 44
    PV      shift, and go to state 45
    RETURN  shift, and go to state 46
    IF      shift, and go to state 47
    WHILE   shift, and go to state 48
    NOT     shift, and go to state 49
    MOINS   shift, and go to state 50

    $default  reduce using rule 18 (block)

    pv       go to state 54
    inst     go to state 77
    ao       go to state 56
    aff      go to state 57
    ret      go to state 58
    cond     go to state 59
    if_head  go to state 60
    if       go to state 61
    loop     go to state 62
    while    go to state 63
    exp      go to state 64
    app      go to state 65
    fid      go to state 66


State 54

   38 inst: pv •

    $default  reduce using rule 38 (inst)


State 55

   30 inst_list: inst •

    $default  reduce using rule 30 (inst_list)


State 56

   32 inst: ao • block af

    $default  reduce using rule 20 (decl_list)

    block      go to state 78
    decl_list  go to state 36


State 57

   34 inst: aff • pv

    PV  shift, and go to state 45

    pv  go to state 79


State 58

   35 inst: ret • pv

    PV  shift, and go to state 45

    pv  go to state 80


State 59

   36 inst: cond •

    $default  reduce using rule 36 (inst)


State 60

   45 cond: if_head • ELSE $@2 inst
   46     | if_head •

    ELSE  shift, and go to state 81

    $default  reduce using rule 46 (cond)


State 61

   48 if_head: if • bool_cond $@3 inst

    PO  shift, and go to state 82

    bool_cond  go to state 83


State 62

   37 inst: loop •

    $default  reduce using rule 37 (inst)


State 63

   52 loop: while • while_cond $@4 inst

    PO  shift, and go to state 84

    while_cond  go to state 85


State 64

   33 inst: exp • pv
   56 exp: exp • PLUS exp
   57    | exp • MOINS exp
   58    | exp • STAR exp
   59    | exp • DIV exp
   66    | exp • INF exp
   67    | exp • SUP exp
   68    | exp • EQUAL exp
   69    | exp • DIFF exp
   71    | exp • AND @5 exp
   73    | exp • OR @6 exp

    PV     shift, and go to state 45
    AND    shift, and go to state 86
    OR     shift, and go to state 87
    DIFF   shift, and go to state 88
    EQUAL  shift, and go to state 89
    SUP    shift, and go to state 90
    INF    shift, and go to state 91
    PLUS   shift, and go to state 92
    MOINS  shift, and go to state 93
    STAR   shift, and go to state 94
    DIV    shift, and go to state 95

    pv  go to state 96


State 65

   62 exp: app •

    $default  reduce using rule 62 (exp)


State 66

   75 app: fid • $@7 PO args PF

    $default  reduce using rule 74 ($@7)

    $@7  go to state 97


State 67

   11 params: type ID VIR params •

    $default  reduce using rule 11 (params)


State 68

   41 aff: ID EQ • exp

    NUM    shift, and go to state 40
    DEC    shift, and go to state 41
    ID     shift, and go to state 69
    PO     shift, and go to state 44
    NOT    shift, and go to state 49
    MOINS  shift, and go to state 50

    exp  go to state 98
    app  go to state 65
    fid  go to state 66


State 69

   61 exp: ID •
   76 fid: ID •

    PO        reduce using rule 76 (fid)
    $default  reduce using rule 61 (exp)


State 70

   56 exp: exp • PLUS exp
   57    | exp • MOINS exp
   58    | exp • STAR exp
   59    | exp • DIV exp
   60    | PO exp • PF
   66    | exp • INF exp
   67    | exp • SUP exp
   68    | exp • EQUAL exp
   69    | exp • DIFF exp
   71    | exp • AND @5 exp
   73    | exp • OR @6 exp

    PF     shift, and go to state 99
    AND    shift, and go to state 86
    OR     shift, and go to state 87
    DIFF   shift, and go to state 88
    EQUAL  shift, and go to state 89
    SUP    shift, and go to state 90
    INF    shift, and go to state 91
    PLUS   shift, and go to state 92
    MOINS  shift, and go to state 93
    STAR   shift, and go to state 94
    DIV    shift, and go to state 95


State 71

   43 ret: RETURN PO • PF
   60 exp: PO • exp PF

    NUM    shift, and go to state 40
    DEC    shift, and go to state 41
    ID     shift, and go to state 69
    PO     shift, and go to state 44
    PF     shift, and go to state 100
    NOT    shift, and go to state 49
    MOINS  shift, and go to state 50

    exp  go to state 70
    app  go to state 65
    fid  go to state 66


State 72

   42 ret: RETURN exp •
   56 exp: exp • PLUS exp
   57    | exp • MOINS exp
   58    | exp • STAR exp
   59    | exp • DIV exp
   66    | exp • INF exp
   67    | exp • SUP exp
   68    | exp • EQUAL exp
   69    | exp • DIFF exp
   71    | exp • AND @5 exp
   73    | exp • OR @6 exp

    AND    shift, and go to state 86
    OR     shift, and go to state 87
    DIFF   shift, and go to state 88
    EQUAL  shift, and go to state 89
    SUP    shift, and go to state 90
    INF    shift, and go to state 91
    PLUS   shift, and go to state 92
    MOINS  shift, and go to state 93
    STAR   shift, and go to state 94
    DIV    shift, and go to state 95

    $default  reduce using rule 42 (ret)


State 73

   56 exp: exp • PLUS exp
   57    | exp • MOINS exp
   58    | exp • STAR exp
   59    | exp • DIV exp
   65    | NOT exp •
   66    | exp • INF exp
   67    | exp • SUP exp
   68    | exp • EQUAL exp
   69    | exp • DIFF exp
   71    | exp • AND @5 exp
   73    | exp • OR @6 exp

    $default  reduce using rule 65 (exp)


State 74

   55 exp: MOINS exp •
   56    | exp • PLUS exp
   57    | exp • MOINS exp
   58    | exp • STAR exp
   59    | exp • DIV exp
   66    | exp • INF exp
   67    | exp • SUP exp
   68    | exp • EQUAL exp
   69    | exp • DIFF exp
   71    | exp • AND @5 exp
   73    | exp • OR @6 exp

    $default  reduce using rule 55 (exp)


State 75

   19 decl_list: decl_list decl PV •

    $default  reduce using rule 19 (decl_list)


State 76

   24 vlist: ID •

    $default  reduce using rule 24 (vlist)


State 77

   29 inst_list: inst_list inst •

    $default  reduce using rule 29 (inst_list)


State 78

   32 inst: ao block • af

    AF  shift, and go to state 101

    af  go to state 102


State 79

   34 inst: aff pv •

    $default  reduce using rule 34 (inst)


State 80

   35 inst: ret pv •

    $default  reduce using rule 35 (inst)


State 81

   45 cond: if_head ELSE • $@2 inst

    $default  reduce using rule 44 ($@2)

    $@2  go to state 103


State 82

   49 bool_cond: PO • exp PF

    NUM    shift, and go to state 40
    DEC    shift, and go to state 41
    ID     shift, and go to state 69
    PO     shift, and go to state 44
    NOT    shift, and go to state 49
    MOINS  shift, and go to state 50

    exp  go to state 104
    app  go to state 65
    fid  go to state 66


State 83

   48 if_head: if bool_cond • $@3 inst

    $default  reduce using rule 47 ($@3)

    $@3  go to state 105


State 84

   53 while_cond: PO • exp PF

    NUM    shift, and go to state 40
    DEC    shift, and go to state 41
    ID     shift, and go to state 69
    PO     shift, and go to state 44
    NOT    shift, and go to state 49
    MOINS  shift, and go to state 50

    exp  go to state 106
    app  go to state 65
    fid  go to state 66


State 85

   52 loop: while while_cond • $@4 inst

    $default  reduce using rule 51 ($@4)

    $@4  go to state 107


State 86

   71 exp: exp AND • @5 exp

    $default  reduce using rule 70 (@5)

    @5  go to state 108


State 87

   73 exp: exp OR • @6 exp

    $default  reduce using rule 72 (@6)

    @6  go to state 109


State 88

   69 exp: exp DIFF • exp

    NUM    shift, and go to state 40
    DEC    shift, and go to state 41
    ID     shift, and go to state 69
    PO     shift, and go to state 44
    NOT    shift, and go to state 49
    MOINS  shift, and go to state 50

    exp  go to state 110
    app  go to state 65
    fid  go to state 66


State 89

   68 exp: exp EQUAL • exp

    NUM    shift, and go to state 40
    DEC    shift, and go to state 41
    ID     shift, and go to state 69
    PO     shift, and go to state 44
    NOT    shift, and go to state 49
    MOINS  shift, and go to state 50

    exp  go to state 111
    app  go to state 65
    fid  go to state 66


State 90

   67 exp: exp SUP • exp

    NUM    shift, and go to state 40
    DEC    shift, and go to state 41
    ID     shift, and go to state 69
    PO     shift, and go to state 44
    NOT    shift, and go to state 49
    MOINS  shift, and go to state 50

    exp  go to state 112
    app  go to state 65
    fid  go to state 66


State 91

   66 exp: exp INF • exp

    NUM    shift, and go to state 40
    DEC    shift, and go to state 41
    ID     shift, and go to state 69
    PO     shift, and go to state 44
    NOT    shift, and go to state 49
    MOINS  shift, and go to state 50

    exp  go to state 113
    app  go to state 65
    fid  go to state 66


State 92

   56 exp: exp PLUS • exp

    NUM    shift, and go to state 40
    DEC    shift, and go to state 41
    ID     shift, and go to state 69
    PO     shift, and go to state 44
    NOT    shift, and go to state 49
    MOINS  shift, and go to state 50

    exp  go to state 114
    app  go to state 65
    fid  go to state 66


State 93

   57 exp: exp MOINS • exp

    NUM    shift, and go to state 40
    DEC    shift, and go to state 41
    ID     shift, and go to state 69
    PO     shift, and go to state 44
    NOT    shift, and go to state 49
    MOINS  shift, and go to state 50

    exp  go to state 115
    app  go to state 65
    fid  go to state 66


State 94

   58 exp: exp STAR • exp

    NUM    shift, and go to state 40
    DEC    shift, and go to state 41
    ID     shift, and go to state 69
    PO     shift, and go to state 44
    NOT    shift, and go to state 49
    MOINS  shift, and go to state 50

    exp  go to state 116
    app  go to state 65
    fid  go to state 66


State 95

   59 exp: exp DIV • exp

    NUM    shift, and go to state 40
    DEC    shift, and go to state 41
    ID     shift, and go to state 69
    PO     shift, and go to state 44
    NOT    shift, and go to state 49
    MOINS  shift, and go to state 50

    exp  go to state 117
    app  go to state 65
    fid  go to state 66


State 96

   33 inst: exp pv •

    $default  reduce using rule 33 (inst)


State 97

   75 app: fid $@7 • PO args PF

    PO  shift, and go to state 118


State 98

   41 aff: ID EQ exp •
   56 exp: exp • PLUS exp
   57    | exp • MOINS exp
   58    | exp • STAR exp
   59    | exp • DIV exp
   66    | exp • INF exp
   67    | exp • SUP exp
   68    | exp • EQUAL exp
   69    | exp • DIFF exp
   71    | exp • AND @5 exp
   73    | exp • OR @6 exp

    AND    shift, and go to state 86
    OR     shift, and go to state 87
    DIFF   shift, and go to state 88
    EQUAL  shift, and go to state 89
    SUP    shift, and go to state 90
    INF    shift, and go to state 91
    PLUS   shift, and go to state 92
    MOINS  shift, and go to state 93
    STAR   shift, and go to state 94
    DIV    shift, and go to state 95

    $default  reduce using rule 41 (aff)


State 99

   60 exp: PO exp PF •

    $default  reduce using rule 60 (exp)


State 100

   43 ret: RETURN PO PF •

    $default  reduce using rule 43 (ret)


State 101

   40 af: AF •

    $default  reduce using rule 40 (af)


State 102

   32 inst: ao block af •

    $default  reduce using rule 32 (inst)


State 103

   45 cond: if_head ELSE $@2 • inst

    NUM     shift, and go to state 40
    DEC     shift, and go to state 41
    ID      shift, and go to state 42
    AO      shift, and go to state 43
    PO      shift, and go to state 44
    PV      shift, and go to state 45
    RETURN  shift, and go to state 46
    IF      shift, and go to state 47
    WHILE   shift, and go to state 48
    NOT     shift, and go to state 49
    MOINS   shift, and go to state 50

    pv       go to state 54
    inst     go to state 119
    ao       go to state 56
    aff      go to state 57
    ret      go to state 58
    cond     go to state 59
    if_head  go to state 60
    if       go to state 61
    loop     go to state 62
    while    go to state 63
    exp      go to state 64
    app      go to state 65
    fid      go to state 66


State 104

   49 bool_cond: PO exp • PF
   56 exp: exp • PLUS exp
   57    | exp • MOINS exp
   58    | exp • STAR exp
   59    | exp • DIV exp
   66    | exp • INF exp
   67    | exp • SUP exp
   68    | exp • EQUAL exp
   69    | exp • DIFF exp
   71    | exp • AND @5 exp
   73    | exp • OR @6 exp

    PF     shift, and go to state 120
    AND    shift, and go to state 86
    OR     shift, and go to state 87
    DIFF   shift, and go to state 88
    EQUAL  shift, and go to state 89
    SUP    shift, and go to state 90
    INF    shift, and go to state 91
    PLUS   shift, and go to state 92
    MOINS  shift, and go to state 93
    STAR   shift, and go to state 94
    DIV    shift, and go to state 95


State 105

   48 if_head: if bool_cond $@3 • inst

    NUM     shift, and go to state 40
    DEC     shift, and go to state 41
    ID      shift, and go to state 42
    AO      shift, and go to state 43
    PO      shift, and go to state 44
    PV      shift, and go to state 45
    RETURN  shift, and go to state 46
    IF      shift, and go to state 47
    WHILE   shift, and go to state 48
    NOT     shift, and go to state 49
    MOINS   shift, and go to state 50

    pv       go to state 54
    inst     go to state 121
    ao       go to state 56
    aff      go to state 57
    ret      go to state 58
    cond     go to state 59
    if_head  go to state 60
    if       go to state 61
    loop     go to state 62
    while    go to state 63
    exp      go to state 64
    app      go to state 65
    fid      go to state 66


State 106

   53 while_cond: PO exp • PF
   56 exp: exp • PLUS exp
   57    | exp • MOINS exp
   58    | exp • STAR exp
   59    | exp • DIV exp
   66    | exp • INF exp
   67    | exp • SUP exp
   68    | exp • EQUAL exp
   69    | exp • DIFF exp
   71    | exp • AND @5 exp
   73    | exp • OR @6 exp

    PF     shift, and go to state 122
    AND    shift, and go to state 86
    OR     shift, and go to state 87
    DIFF   shift, and go to state 88
    EQUAL  shift, and go to state 89
    SUP    shift, and go to state 90
    INF    shift, and go to state 91
    PLUS   shift, and go to state 92
    MOINS  shift, and go to state 93
    STAR   shift, and go to state 94
    DIV    shift, and go to state 95


State 107

   52 loop: while while_cond $@4 • inst

    NUM     shift, and go to state 40
    DEC     shift, and go to state 41
    ID      shift, and go to state 42
    AO      shift, and go to state 43
    PO      shift, and go to state 44
    PV      shift, and go to state 45
    RETURN  shift, and go to state 46
    IF      shift, and go to state 47
    WHILE   shift, and go to state 48
    NOT     shift, and go to state 49
    MOINS   shift, and go to state 50

    pv       go to state 54
    inst     go to state 123
    ao       go to state 56
    aff      go to state 57
    ret      go to state 58
    cond     go to state 59
    if_head  go to state 60
    if       go to state 61
    loop     go to state 62
    while    go to state 63
    exp      go to state 64
    app      go to state 65
    fid      go to state 66


State 108

   71 exp: exp AND @5 • exp

    NUM    shift, and go to state 40
    DEC    shift, and go to state 41
    ID     shift, and go to state 69
    PO     shift, and go to state 44
    NOT    shift, and go to state 49
    MOINS  shift, and go to state 50

    exp  go to state 124
    app  go to state 65
    fid  go to state 66


State 109

   73 exp: exp OR @6 • exp

    NUM    shift, and go to state 40
    DEC    shift, and go to state 41
    ID     shift, and go to state 69
    PO     shift, and go to state 44
    NOT    shift, and go to state 49
    MOINS  shift, and go to state 50

    exp  go to state 125
    app  go to state 65
    fid  go to state 66


State 110

   56 exp: exp • PLUS exp
   57    | exp • MOINS exp
   58    | exp • STAR exp
   59    | exp • DIV exp
   66    | exp • INF exp
   67    | exp • SUP exp
   68    | exp • EQUAL exp
   69    | exp • DIFF exp
   69    | exp DIFF exp •
   71    | exp • AND @5 exp
   73    | exp • OR @6 exp

    PLUS   shift, and go to state 92
    MOINS  shift, and go to state 93
    STAR   shift, and go to state 94
    DIV    shift, and go to state 95

    $default  reduce using rule 69 (exp)


State 111

   56 exp: exp • PLUS exp
   57    | exp • MOINS exp
   58    | exp • STAR exp
   59    | exp • DIV exp
   66    | exp • INF exp
   67    | exp • SUP exp
   68    | exp • EQUAL exp
   68    | exp EQUAL exp •
   69    | exp • DIFF exp
   71    | exp • AND @5 exp
   73    | exp • OR @6 exp

    PLUS   shift, and go to state 92
    MOINS  shift, and go to state 93
    STAR   shift, and go to state 94
    DIV    shift, and go to state 95

    $default  reduce using rule 68 (exp)


State 112

   56 exp: exp • PLUS exp
   57    | exp • MOINS exp
   58    | exp • STAR exp
   59    | exp • DIV exp
   66    | exp • INF exp
   67    | exp • SUP exp
   67    | exp SUP exp •
   68    | exp • EQUAL exp
   69    | exp • DIFF exp
   71    | exp • AND @5 exp
   73    | exp • OR @6 exp

    PLUS   shift, and go to state 92
    MOINS  shift, and go to state 93
    STAR   shift, and go to state 94
    DIV    shift, and go to state 95

    $default  reduce using rule 67 (exp)


State 113

   56 exp: exp • PLUS exp
   57    | exp • MOINS exp
   58    | exp • STAR exp
   59    | exp • DIV exp
   66    | exp • INF exp
   66    | exp INF exp •
   67    | exp • SUP exp
   68    | exp • EQUAL exp
   69    | exp • DIFF exp
   71    | exp • AND @5 exp
   73    | exp • OR @6 exp

    PLUS   shift, and go to state 92
    MOINS  shift, and go to state 93
    STAR   shift, and go to state 94
    DIV    shift, and go to state 95

    $default  reduce using rule 66 (exp)


State 114

   56 exp: exp • PLUS exp
   56    | exp PLUS exp •
   57    | exp • MOINS exp
   58    | exp • STAR exp
   59    | exp • DIV exp
   66    | exp • INF exp
   67    | exp • SUP exp
   68    | exp • EQUAL exp
   69    | exp • DIFF exp
   71    | exp • AND @5 exp
   73    | exp • OR @6 exp

    STAR  shift, and go to state 94
    DIV   shift, and go to state 95

    $default  reduce using rule 56 (exp)


State 115

   56 exp: exp • PLUS exp
   57    | exp • MOINS exp
   57    | exp MOINS exp •
   58    | exp • STAR exp
   59    | exp • DIV exp
   66    | exp • INF exp
   67    | exp • SUP exp
   68    | exp • EQUAL exp
   69    | exp • DIFF exp
   71    | exp • AND @5 exp
   73    | exp • OR @6 exp

    STAR  shift, and go to state 94
    DIV   shift, and go to state 95

    $default  reduce using rule 57 (exp)


State 116

   56 exp: exp • PLUS exp
   57    | exp • MOINS exp
   58    | exp • STAR exp
   58    | exp STAR exp •
   59    | exp • DIV exp
   66    | exp • INF exp
   67    | exp • SUP exp
   68    | exp • EQUAL exp
   69    | exp • DIFF exp
   71    | exp • AND @5 exp
   73    | exp • OR @6 exp

    $default  reduce using rule 58 (exp)


State 117

   56 exp: exp • PLUS exp
   57    | exp • MOINS exp
   58    | exp • STAR exp
   59    | exp • DIV exp
   59    | exp DIV exp •
   66    | exp • INF exp
   67    | exp • SUP exp
   68    | exp • EQUAL exp
   69    | exp • DIFF exp
   71    | exp • AND @5 exp
   73    | exp • OR @6 exp
